<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_custom_dialog">对话框</string>
    <string name="exit">退出</string>
    <string name="app_name">四监管办公自动化系统</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_et">用户名</string>
    <string name="login_psw_et">密码</string>
    <string name="login">登录</string>
    <string name="contract_detail">合同详情</string>
    <string name="contract_name">合同名称：</string>
    <string name="contract_type">合同类型：</string>
    <string name="contract_content">合同内容：</string>
    <string name="contract_date">合同日期：</string>
    <string name="contract_money">合同金额：</string>
    <string name="contract_area">工作区(社区)：</string>
    <string name="contract_shequ">社  区  ：</string>
    <string name="contract_A">甲  方  ：</string>
    <string name="contract_B">乙  方  ：</string>
    <string name="base_info">基本信息</string>
    <string name="apply_dh">申请单号：</string>
    <string name="apply_name">申请名称：</string>
    <string name="apply_type">申请类型：</string>
    <string name="apply_man">申  请 人 ：</string>
    <string name="contractNUM">合  同 号 ：</string>
    <string name="apply_date">申请日期：</string>
    <string name="apply_money">申请金额：</string>
    <string name="apply_area">申请地区(村庄)：</string>
    <string name="apply_gzq">工 作 区：</string>
    <string name="apply_cun">村：</string>
    <string name="apply_lcmc">流程名称：</string>
    <string name="apply_content">申请内容：</string>
    <string name="apply_update">提交日期：</string>
    <string name="sp_rs">审批结果：</string>
    <string name="sp_y">通过</string>
    <string name="sp_c">退回</string>
    <string name="sp_n">不通过</string>
    <string name="sp_ds">审批说明：</string>
    <string name="sp_title">资金审批</string>
    <string name="process_detail">流程查看</string>
    <string name="process_deep">流程详细</string>
    <string name="pic_detail">附件详细</string>
    <string name="sp_save">保存</string>
    <string name="sp_qr">审批确认</string>
    <string name="sp_clear">清除</string>
    <string name="sp_cancel">返回</string>
    <string name="sp_num">  序    号     ：</string>
    <string name="sp_name">审批名称：</string>
    <string name="sp_turn">审批顺序：</string>
    <string name="sp_man">审  批  人：</string>
    <string name="sp_start">开始时间：</string>
    <string name="sp_time">审批时间：</string>
    <string name="sp_status">审批状态：</string>
    <string name="sp_des">审批说明：</string>
    <string name="sp_czr">村委主任审批</string>
    <string name="sp_csj">村委书记审批</string>
    <string name="sp_gzqsp">工作区审批</string>
    <string name="sp_jgbsp">经管办审批</string>
    <string name="sp_fgldsp">分管领导审批</string>
    <string name="sp_zgldsp">主管领导审批</string>
    <string name="digital_sign">手写签名</string>
    <string name="sp_waiting_list">待审批列表</string>
    <string name="sp_contract_list">合同列表</string>
    <string name="sp_work_list">工作提醒</string>
    <string name="main_exit">退出登录</string>
    <string name="refresh">刷新</string>
    <string name="datanull">当前无数据！</string>
    <string name="intial_setting">设置</string>
    <string name="sp_list_type">表单类型</string>
    <string name="sp_search">检索</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="use_man">用 章 人：</string>
    <string name="use_address">用章地址：</string>
    <string name="seal_detail">公章申请详情</string>
    <string name="apply_code">申请单号</string>

</resources>