<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <TextView
        android:id="@+id/contract_apply_num_detail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/head"
        android:gravity="center"
        android:text="@string/seal_detail"
        android:textColor="#ffffff"
        android:textSize="21sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/contract_apply_num_detail"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/base_info"
                    android:textSize="19sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                style="@style/circle_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/apply_gzq"/>

                    <TextView
                        android:id="@+id/contract_work_area_detail"
                        style="@style/textstyle2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/contract_shequ"/>

                    <TextView
                        android:id="@+id/contract_village_detail"
                        style="@style/textstyle2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/apply_code"/>

                    <TextView
                        android:id="@+id/apply_code"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/use_man"/>

                    <TextView
                        android:id="@+id/use_man"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/use_address"/>

                    <TextView
                        android:id="@+id/use_address"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/apply_date"/>

                    <TextView
                        android:id="@+id/apply_date"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/apply_content"/>

                    <TextView
                        android:id="@+id/apply_content"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/apply_man"/>

                    <TextView
                        android:id="@+id/apply_man"
                        style="@style/textstyle2"
                        android:layout_width="match_parent"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:text="@string/sp_title"
                    android:textSize="19sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/seal_pic_sq"
                    style="@style/btn1"
                    android:layout_weight="1"
                    android:background="@drawable/circle_background_btn"
                    android:text="@string/pic_detail"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/seal_process_btn"
                    style="@style/btn1"
                    android:layout_weight="1"
                    android:background="@drawable/circle_background_btn"
                    android:text="@string/process_deep"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l10"
                style="@style/circle_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sp_rs"/>

                    <RadioGroup
                        android:id="@+id/seal_sqresult_radiogroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/seal_radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/sp_y"/>

                        <RadioButton
                            android:id="@+id/seal_radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sp_n"/>

                        <RadioButton
                            android:id="@+id/seal_radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sp_c"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textstyle1"
                        android:text="@string/sp_ds"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/seal_sp_ds"
                        style="@style/circle_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="2">

                        <requestFocus/>
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/seal_sign_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:background="@drawable/more_item_unpress"
                        android:onClick="onThumbnailClick"
                        android:src="@drawable/pic_none_9"/>

                    <Button
                        android:id="@+id/seal_sp_digital_sign"
                        style="@style/btn1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/circle_background_btn"
                        android:text="@string/digital_sign"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="18dp">

                <Button
                    android:id="@+id/seal_sp_save"
                    style="@style/btn1"
                    android:layout_weight="1"
                    android:background="@drawable/circle_background"
                    android:text="@string/sp_qr"/>

                <Button
                    android:id="@+id/seal_sp_cancel"
                    style="@style/btn1"
                    android:layout_marginLeft="17dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle_background"
                    android:text="@string/sp_cancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>