<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:background="@color/white"
      >

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/iv_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sign_btn"
            android:text="@string/sp_save"
            android:textColor="@android:color/white" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/iv_btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
             android:background="@drawable/sign_btn"
            android:text="@string/sp_clear"
            android:textColor="@android:color/white" 
            android:layout_marginLeft="0.5sp"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/iv_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
              android:background="@drawable/sign_btn"
            android:text="@string/sp_cancel"
            android:textColor="@android:color/white" 
            android:layout_marginLeft="0.5sp"/>
    </LinearLayout>
  

    <com.yiyun.sijianguan.common.MainView
        android:id="@+id/mainView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>